--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <nav id="navbar"></nav>
+        <nav id="navbar">
+            <header>Documentation</header>
+            <a class="nav-link" href="#Introduction">Introduction</a>
+            <a class="nav-link" href="#Setup">Setup</a>
+            <a class="nav-link" href="#Basic_Usage">Basic Usage</a>
+            <a class="nav-link" href="#Advanced_Topics">Advanced Topics</a>
+            <a class="nav-link" href="#API_Reference">API Reference</a>
+        </nav>
     </body>
 </html>
