--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
             <a class="nav-link" href="#Advanced_Topics">Advanced Topics</a>
             <a class="nav-link" href="#API_Reference">API Reference</a>
         </nav>
+        <main id="main-doc">
+            
+        </main>
     </body>
 </html>
