add introduction section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
             <a class="nav-link" href="#API_Reference">API Reference</a>
         </nav>
         <main id="main-doc">
-            
+            <section id="Introduction" class="main-section">
+                <header>Introduction</header>
+                <p>This is an introduction to the documentation page.</p>
+                <p>We will cover various topics.</p>
+                <p>The documentation is structured into several sections.</p>
+                <p>Each section covers a different aspect of the topic.</p>
+                <p>Refer to the navigation bar to jump between sections.</p>
+            </section>
         </main>
     </body>
 </html>
