add set up section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
                 <p>Each section covers a different aspect of the topic.</p>
                 <p>Refer to the navigation bar to jump between sections.</p>
             </section>
+            <section id="Setup" class="main-section">
+                <header>Setup</header>
+                <p>Follow these steps to set up the project:</p>
+                <ol>
+                    <li>Download the project files.</li>
+                    <li>Install the necessary dependencies.</li>
+                    <li>Run the setup script.</li>
+                </ol>
+                <p>Make sure you have the following tools installed:</p>
+                <ul>
+                    <li>Node.js</li>
+                    <li>npm</li>
+                    <li>Git</li>
+                </ul>
+            </section>
         </main>
     </body>
 </html>
