add basic usage section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                     <li>Git</li>
                 </ul>
             </section>
+            <section id="Basic_Usage" class="main-section">
+                <header>Basic Usage</header>
+                <p>Here are some basic usage examples:</p>
+                <code>console.log('Hello, world!');</code>
+                <p>Another example:</p>
+                <code>let x = 10;</code>
+                <p>To start the server, use:</p>
+                <code>npm start</code>
+            </section>
         </main>
     </body>
 </html>
