add advanced topics section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 <p>To start the server, use:</p>
                 <code>npm start</code>
             </section>
+            <section id="Advanced_Topics" class="main-section">
+                <header>Advanced Topics</header>
+                <p>This section covers advanced topics.</p>
+                <p>Advanced configuration options:</p>
+                <code>config.set('option', value);</code>
+                <p>Using plugins:</p>
+                <code>plugin.install('plugin-name');</code>
+            </section>
         </main>
     </body>
 </html>
