add api reference section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                 <p>Using plugins:</p>
                 <code>plugin.install('plugin-name');</code>
             </section>
+            <section id="API_Reference" class="main-section">
+                <header>API Reference</header>
+                <p>This is the API reference section.</p>
+                <p>Function: <code>getData()</code></p>
+                <p>Parameters:</p>
+                <ul>
+                    <li>url: string</li>
+                    <li>options: object</li>
+                </ul>
+                <p>Returns:</p>
+                <ul>
+                    <li>Promise</li>
+                </ul>
+            </section>
         </main>
     </body>
 </html>
